5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1831_1645.log
== TEST (2019-06-13 16:06:14) 
-- CODE:
from numpy import *
not=array(eval(input("Digite:   ")))
vetor=zeros(size(not), dtype=int)
cont=0

for elemento in not:
	if(elemento >=2000):
		cont=cont
		print(cont)
	
-- ERROR:
File "XXXX", line 2
    not=array(eval(input()))
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:06:42) 
-- CODE:
from numpy import *
not=array(eval(input('Digite:   ')))
vetor=zeros(size(not), dtype=int)
cont=0

for elemento in not:
	if(elemento >=2000):
		cont=cont
		print(cont)
	
-- ERROR:
File "XXXX", line 2
    not=array(eval(input()))
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:07:03) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(not), dtype=int)
cont=0

for elemento in v:
	if(elemento >=2000):
		cont=cont
		print(cont)
	
-- ERROR:
File "XXXX", line 3
    vetor=zeros(size(not), dtype=int)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:07:15) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0

for elemento in v:
	if(elemento >=2000):
		cont=cont
		print(cont)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:07:40) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0

for elemento in v:
	if(elemento >=2000):
		cont=cont+1
		print(cont)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:07:58) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0

for elemento in v:
	if(elemento >=2000):
		cont=cont+1
		print(cont)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:08:16) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0

for elemento in v:
	if(elemento >=2000):
		cont=cont+1
	print(cont)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:08:27) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0

for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:12:32) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0

for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

for j in cont:
	c
	
-- EXECUTION TIME:
0.90565
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1831/1645/main.py", line 11, in <module>
    for j in cont:
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:14:04) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0

for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:24:08) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0

for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

for elemento in range(size(vetor)):
	if(elemento[i]>=2000):
		elemento[i]=i+1
	print(i)
	
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:24:52) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0

for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

for elemento in range(size(vetor)):
	if(elemento[i]>=2000):
		elemento[i]=elemento[i]+1
	print(i)
	
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:25:53) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0
x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

for elemento in range(size(vetor)):
	if(elemento[i]>=2000):
		x=x+i
	print(i)
	
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:27:32) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0
x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

for elemento in range(size(vetor)):
	if(elemento >=2000):
		x=x+i
	print(i)
	
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:27:46) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0
x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

for elemento in range(size(vetor)):
	if(elemento >=2000):
		x=x+i
	print(x)
	
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:27:50) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0
x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

for elemento in range(size(vetor)):
	if(elemento >=2000):
		x=x+i
	print(x)
	
	


	
-- EXECUTION TIME:
1.01294
-- TEST CASE 1:
---- input:
[2000,1500,2100,1500,3000,3200,1205,1800]
---- correct output:
4
[0 2 4 5]
---- user output:
4
0
0
0
0
0
0
0
0
-- TEST CASE 2:
---- input:
[2000,1500,2100,1500,3000]
---- correct output:
3
[0 2 4]
---- user output:
3
0
0
0
0
0
-- TEST CASE 3:
---- input:
[2000,1500,1950,1555,1999,2050,2560,2851,1500,3000]
---- correct output:
5
[0 5 6 7 9]
---- user output:
5
0
0
0
0
0
0
0
0
0
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:27:53) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0
x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

for elemento in range(size(vetor)):
	if(elemento >=2000):
		x=x+i
	print(x)
	
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:28:08) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0
x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

for elemento in range(size(vetor)):
	if(elemento >=2000):
		x=x+i
print(x)
	
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:28:12) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0
x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

for elemento in range(size(vetor)):
	if(elemento >=2000):
		x=x+i
print(x)
	
	


	
-- EXECUTION TIME:
0.95552
-- TEST CASE 1:
---- input:
[2000,1500,2100,1500,3000,3200,1205,1800]
---- correct output:
4
[0 2 4 5]
---- user output:
4
0
-- TEST CASE 2:
---- input:
[2000,1500,2100,1500,3000]
---- correct output:
3
[0 2 4]
---- user output:
3
0
-- TEST CASE 3:
---- input:
[2000,1500,1950,1555,1999,2050,2560,2851,1500,3000]
---- correct output:
5
[0 5 6 7 9]
---- user output:
5
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:28:13) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0
x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

for elemento in range(size(vetor)):
	if(elemento >=2000):
		x=x+i
print(x)
	
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:28:50) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0
x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

for elemento in range(size(vetor)):
	if(elemento >=2000):
		x=x+i
print(vetor)
	
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:28:54) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0
x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

for elemento in range(size(vetor)):
	if(elemento >=2000):
		x=x+i
print(vetor)
	
	


	
-- EXECUTION TIME:
0.93865
-- TEST CASE 1:
---- input:
[2000,1500,2100,1500,3000,3200,1205,1800]
---- correct output:
4
[0 2 4 5]
---- user output:
4
[0 0 0 0 0 0 0 0]
-- TEST CASE 2:
---- input:
[2000,1500,2100,1500,3000]
---- correct output:
3
[0 2 4]
---- user output:
3
[0 0 0 0 0]
-- TEST CASE 3:
---- input:
[2000,1500,1950,1555,1999,2050,2560,2851,1500,3000]
---- correct output:
5
[0 5 6 7 9]
---- user output:
5
[0 0 0 0 0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:28:55) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0
x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

for elemento in range(size(vetor)):
	if(elemento >=2000):
		x=x+i
print(vetor)
	
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:30:48) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0
x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

for elemento in range(size(vetor)):
	if(elemento >=2000):
		vetor=vetor x+i
print(vetor)
	
	


	
-- ERROR:
File "XXXX", line 13
    vetor=vetor x+i
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:30:50) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0
x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

for elemento in range(size(vetor)):
	if(elemento >=2000):
		vetor=vetor x+i
print(vetor)
	
	


	
-- ERROR:
File "XXXX", line 13
    vetor=vetor x+i
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:31:15) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0
x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

for elemento in range(size(vetor)):
	if(elemento >=2000):
		vetor[i]=vetor +1
print(vetor)
	
	


	
-- EXECUTION TIME:
0.816357
-- TEST CASE 1:
---- input:
[2000,1500,2100,1500,3000,3200,1205,1800]
---- correct output:
4
[0 2 4 5]
---- user output:
4
[0 0 0 0 0 0 0 0]
-- TEST CASE 2:
---- input:
[2000,1500,2100,1500,3000]
---- correct output:
3
[0 2 4]
---- user output:
3
[0 0 0 0 0]
-- TEST CASE 3:
---- input:
[2000,1500,1950,1555,1999,2050,2560,2851,1500,3000]
---- correct output:
5
[0 5 6 7 9]
---- user output:
5
[0 0 0 0 0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:31:17) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0
x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

for elemento in range(size(vetor)):
	if(elemento >=2000):
		vetor[i]=vetor +1
print(vetor)
	
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:32:33) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0
x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

for elemento in range(vetor):
	if(elemento >=2000):
		vetor=vetor +1
print(vetor)
	
	


	
-- EXECUTION TIME:
0.959752
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1831/1645/main.py", line 11, in <module>
    for elemento in range(vetor):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:34:30) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0
x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

for i in range(vetor):
	if(i >=2000):
		
		
	
	


	
-- ERROR:
File "XXXX", line 20
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:37:02) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0
x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

for elemento in range(size(vetor)):
	
	
	
	
		
		
	
	


	
-- ERROR:
File "XXXX", line 23
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:37:11) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0
x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

for elemento in range(size(vetor)):
	
	
	
	
		
		
	
	


	
-- EXECUTION TIME:
0.596912
-- ERROR:
  File "/home/codebench/codes/1831/1645/main.py", line 23
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:38:02) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(v), dtype=int)
cont=0
x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)
print(vetor)

	
	
	
		
		
	
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:39:22) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
vetor=zeros(size(cont), dtype=int)
cont=0

x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)
print(vetor)

	
	
	
		
		
	
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:03) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
cont=0
vetor=zeros(size(cont), dtype=int)
cont=0

x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)
print(vetor)

	
	
	
		
		
	
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:41:35) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
cont=0
vetor=zeros(size(v), dtype=int)
cont=0

x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)
p

	
	
	
		
		
	
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:42:52) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
cont=0
vetor=zeros(size(v), dtype=int)
cont=0

x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

	
	
	
		
		
	
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:48) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
cont=0
vetor=zeros(size(v), dtype=int)
cont=0

x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

novo=zeros(size(cont),dtype=int)
print(novo) 

	
	
	
		
		
	
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:45:44) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
cont=0

x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

novo=zeros(size(cont),dtype=int)
print(novo) 

	
	
	
		
		
	
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:46:52) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
cont=0

x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

novo=zeros(size(cont),dtype=int)
print(novo) 

	
	
	
		
		
	
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:47:49) 
-- CODE:
from numpy import *
v=array(eval(input('Digite:   ')))
cont=0

x=0
for elemento in v:
	if(elemento >=2000):
		cont=cont+1
print(cont)

novo=zeros(cont,dtype=int)
print(novo) 

	
	
	
		
		
	
	


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
